# cliecho

./: .gitignore  build_modules.sh  main.py
core/: cli.py  cli_manager.py  command_registry.py  command_tree.py  completer.py  dispatcher.py  events.py  exceptions.py  interface_manager.py  log_manager.py  logger.py  module_base.py  module_loader.py  output_formatter.py  validation.py
core/ui/: interactive.py
core/util/: singleton.py
modules/temp/: __main__.py
modules/temp/new_test_module/: README.md  __init__.py  __main__.py  config.yml  main.py
modules/testmodule/: __init__.py  __main__.py  config.yml  pyproject.toml
modules_working/new_test_module/: __main__.py  build.sh  pyproject.toml
modules_working/new_test_module/src/new_test_module/: __init__.py  __main__.py  main.py
shared/: log_types.py  module_base.py  module_context.py  module_logger.py
util/: new_module.py
